# composable-workflow-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
cwe/: __init__.py  cli.py  hydrate.py  llm.py  nodes.py  primitives.py  skills.py  spinner.py
docs/: plan.md  remote_handoff_plan.md
flows/fix_failing_test/: flow.yaml
flows/fix_failing_test/implement/: skill.md
flows/fix_failing_test/run_tests/: skill.md
flows/greenfield_ml/: flow.yaml  keep_or_revert.py  report.py  setup_env.py
flows/greenfield_ml/evaluate/: skill.md
flows/greenfield_ml/git_init/: skill.md
flows/greenfield_ml/implement/: skill.md
flows/greenfield_ml/proposal_critic/: skill.md
flows/greenfield_ml/propose/: skill.md
flows/greenfield_ml/train/: skill.md
flows/guessing_game/: flow.yaml
flows/kaggle_solver/: flow.yaml  prepare_comp.py
flows/lewm_hillclimb/: cloud_setup.sh  flow.yaml
flows/poll_job/: flow.yaml  status.py  submit.py
flows/story_writer/: flow.yaml
saage/: cli.py  config.py  nodes.py
saage/remote/: __init__.py  cli.py  creds.py  handoff.py  lambda_api.py  observe.py  r2push.py  scripts.py  sshio.py  state.py  target.py  workspace.py
tests/: conftest.py  cwe_testkit.py  test_agent.py  test_command_policy.py  test_primitives.py  test_tools.py
tests/integration/: test_fix_failing_test.py  test_guessing_game.py  test_poll_job.py  test_story_writer.py
tests/remote/: conftest.py  test_creds.py  test_lambda_api.py  test_observe.py  test_r2.py  test_r2_live.py  test_scripts.py  test_ssh_integration.py  test_state.py  test_workspace.py
(+8 files in other folders)
