[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saage"
version = "0.1.0"
description = "A tiny deterministic composable agentic workflow engine on PocketFlow"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chris Padwick" }]
keywords = ["llm", "agents", "agentic", "workflow", "orchestration", "pocketflow", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pocketflow",
    "pyyaml",
    "jinja2",
    "openai",     # also covers OpenRouter + local OpenAI-compatible servers
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
saage = "saage.cli:main"

[project.urls]
Homepage = "https://github.com/cgpadwick/saage"
Repository = "https://github.com/cgpadwick/saage"
Issues = "https://github.com/cgpadwick/saage/issues"

[tool.setuptools.packages.find]
include = ["saage*"]

[tool.pytest.ini_options]
markers = [
    "live: hits a real LLM provider; skipped unless SAAGE_LIVE_PROVIDER is set",
]
testpaths = ["tests"]
